# QmlFIleDialog

./: .gitignore  .gitmodules  CMakeLists.txt  main.py
libs/: CMakeLists.txt
settings/osmconfigs/: cycle  hiking  night-transit  satellite  street  terrain  transit
src/c++/: filesystemmodel.cpp  filesystemmodel.h  main.cpp
src/qml/: Main.qml  qml.qrc
src/qml/FileDialog/: CustomFileDialog.qml
